feat: expand fingerprint details and fix local dev server stability

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "dependencies": {
     "@netlify/blobs": "^7.3.0",
     "@netlify/functions": "^2.6.0"
+  },
+  "devDependencies": {
+    "netlify-cli": "^17.34.4"
   }
 }
